--- a/index.html
+++ b/index.html
@@ -530,7 +530,10 @@
                         ✍️ Participé en actividades culturales, escribiendo poemas y componiendo canciones
                     </div>
                     <div class="achievement leadership">
-                        ⛪ Me empecé a involucrar más en mi iglesia
+                        ⛪ Empecé a asistir a la iglesia Me empecé a involucrar más en mi iglesia
+                    </div>
+                    <div class="achievement leadership">
+                        Me empecé a involucrar más en mi iglesia
                     </div>
                     <div class="achievement important">
                         🎓 <strong>2016:</strong> Me gradué del colegio
@@ -650,3 +653,4 @@
     </div>
 </body>
 </html>
+
