--- a/index.html
+++ b/index.html
@@ -499,18 +499,18 @@
                 <div class="timeline-dot"></div>
                 <div class="content">
                     <div class="period-title">
-                        <span class="icon">👶</span>
+                        <span class="icon"></span>
                         Infancia y Niñez
                         <span class="period-dates">(2000 - 2008)</span>
                     </div>
                     <div class="achievement">
-                        🏠 Crecí en un hogar donde me enseñaron valores y principios que aún me acompañan
+                        Crecí en un hogar donde me enseñaron valores y principios que aún me acompañan
                     </div>
                     <div class="achievement music">
-                        🎹 Desde niño tuve mucho interés por la música, especialmente por aprender a tocar el piano
+                        Desde niño tuve mucho interés por la música, especialmente por aprender a tocar el piano
                     </div>
                     <div class="achievement education">
-                        📚 En el colegio fui un niño responsable y siempre me iba bien en los estudios
+                        En el colegio fui un niño responsable y siempre me iba bien en los estudios
                     </div>
                 </div>
             </div>
@@ -519,24 +519,24 @@
                 <div class="timeline-dot"></div>
                 <div class="content">
                     <div class="period-title">
-                        <span class="icon">👦</span>
+                        <span class="icon"></span>
                         Adolescencia
                         <span class="period-dates">(2009 - 2016)</span>
                     </div>
                     <div class="achievement">
-                        😊 En esta etapa era algo tímido y tenía sobrepeso, pero siempre cumplía con mis deberes
+                        En esta etapa era algo tímido y tenía sobrepeso, pero siempre cumplía con mis deberes
                     </div>
                     <div class="achievement music">
-                        ✍️ Participé en actividades culturales, escribiendo poemas y componiendo canciones
+                        Participé en actividades culturales, escribiendo poemas y componiendo canciones
                     </div>
                     <div class="achievement leadership">
-                        ⛪ Empecé a asistir a la iglesia Me empecé a involucrar más en mi iglesia
+                        Empecé a asistir a la iglesia
                     </div>
                     <div class="achievement leadership">
                         Me empecé a involucrar más en mi iglesia
                     </div>
                     <div class="achievement important">
-                        🎓 <strong>2016:</strong> Me gradué del colegio
+                         <strong>2016:</strong> Me gradué del colegio
                     </div>
                 </div>
             </div>
@@ -545,18 +545,18 @@
                 <div class="timeline-dot"></div>
                 <div class="content">
                     <div class="period-title">
-                        <span class="icon">👨‍🎓</span>
+                        <span class="icon"></span>
                         Juventud
                         <span class="period-dates">(2017 - 2021)</span>
                     </div>
                     <div class="achievement education">
-                        📊 Después del colegio empecé un <strong>técnico en contabilidad</strong>, pero no logré ejercerlo
+                        Después del colegio empecé un <strong>técnico en contabilidad</strong>, pero no logré ejercerlo
                     </div>
                     <div class="achievement">
-                        💼 Estuve trabajando en <strong>empleos informales</strong> para sostenerme
+                        Estuve trabajando en <strong>empleos informales</strong> para sostenerme
                     </div>
                     <div class="achievement music important">
-                        🎸🎹 Aprendí a tocar <strong>guitarra y piano</strong>, cumpliendo un sueño que tenía desde niño
+                        Aprendí a tocar <strong>guitarra y piano</strong>, cumpliendo un sueño que tenía desde niño
                     </div>
                 </div>
             </div>
@@ -570,16 +570,16 @@
                         <span class="period-dates">(2022 - 2025)</span>
                     </div>
                     <div class="achievement education important">
-                        🖥️ <strong>2022:</strong> Inicié la carrera de <strong>Ingeniería de Sistemas en la UNAD</strong>, de forma virtual
+                        <strong>2022:</strong> Inicié la carrera de <strong>Ingeniería de Sistemas en la UNAD</strong>, de forma virtual
                     </div>
                     <div class="achievement">
-                        🚀 <strong>2023:</strong> Pensé en un proyecto llamado <strong>Startup Meet</strong>, para conectar emprendedores con inversionistas
+                        <strong>2023:</strong> Pensé en un proyecto llamado <strong>Startup Meet</strong>, para conectar emprendedores con inversionistas
                     </div>
                     <div class="achievement education important">
-                        💻 <strong>2024:</strong> Empecé el <strong>técnico en Programación de Software</strong>
+                        <strong>2024:</strong> Empecé el <strong>técnico en Programación de Software</strong>
                     </div>
                     <div class="achievement education important">
-                        🛠️ <strong>Abril de 2025:</strong> Terminé ese técnico con las prácticas, donde trabajé más en soporte técnico y configuración de equipos
+                        🛠<strong>Abril de 2025:</strong> Terminé ese técnico con las prácticas, donde trabajé más en soporte técnico y configuración de equipos
                     </div>
                 </div>
             </div>
@@ -588,18 +588,18 @@
                 <div class="timeline-dot"></div>
                 <div class="content">
                     <div class="period-title">
-                        <span class="icon">🎵</span>
+                        <span class="icon"></span>
                         Liderazgo y Desarrollo Personal
                         <span class="period-dates">(2020 - Actualidad)</span>
                     </div>
                     <div class="achievement leadership important">
-                        🎤 En la iglesia empecé como músico y llegué a ser <strong>líder de alabanza</strong>, organizando a cantantes e instrumentistas
+                        En la iglesia empecé como músico y llegué a ser <strong>líder de alabanza</strong>, organizando a cantantes e instrumentistas
                     </div>
                     <div class="achievement leadership">
-                        📈 He aprendido a ser más responsable, organizado y a tener liderazgo en diferentes áreas
+                        He aprendido a ser más responsable, organizado y a tener liderazgo en diferentes áreas
                     </div>
                     <div class="achievement education">
-                        📖 Actualmente sigo estudiando en la UNAD (7 materias) y aprendiendo nuevas tecnologías de programación y redes
+                        Actualmente sigo estudiando en la UNAD (7 materias) y aprendiendo nuevas tecnologías de programación y redes
                     </div>
                 </div>
             </div>
@@ -613,10 +613,10 @@
                         <span class="period-dates">(2025)</span>
                     </div>
                     <div class="achievement important">
-                        🎯 Hoy busco crecer de manera integral: ser más disciplinado, productivo, mejorar mi salud física y fortalecer mi vida espiritual
+                        Hoy busco crecer de manera integral: ser más disciplinado, productivo, mejorar mi salud física y fortalecer mi vida espiritual
                     </div>
                     <div class="achievement">
-                        ⚖️ Quiero equilibrar mi vida personal, familiar, social y laboral
+                        Quiero equilibrar mi vida personal, familiar, social y laboral
                     </div>
                 </div>
             </div>
@@ -625,32 +625,33 @@
                 <div class="timeline-dot"></div>
                 <div class="content">
                     <div class="period-title">
-                        <span class="icon">🌟</span>
+                        <span class="icon"></span>
                         Futuro Cercano
                         <span class="period-dates">(2026 en adelante)</span>
                     </div>
                     <div class="achievement education important">
-                        🏆 Terminar mi carrera en <strong>Ingeniería de Sistemas</strong>
+                        Terminar mi carrera en <strong>Ingeniería de Sistemas</strong>
                     </div>
                     <div class="achievement important">
-                        📱 Crear proyectos tecnológicos, como una <strong>app para la iglesia</strong> y otros emprendimientos
+                        Crear proyectos tecnológicos, como una <strong>app para la iglesia</strong> y otros emprendimientos
                     </div>
                     <div class="achievement leadership">
-                        🎵 Seguir creciendo como líder en la iglesia y en la música
+                        Seguir creciendo como líder en la iglesia y en la música
                     </div>
                     <div class="achievement important">
-                        💰 Lograr estabilidad económica, personal y espiritual
+                        Lograr estabilidad económica, personal y espiritual
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="footer">
-            <h3>🎓 Rodolfo Parra Pérez</h3>
+            <h3> Rodolfo Parra Pérez</h3>
             <p>Estudiante de <span class="university">Ingeniería de Sistemas en la UNAD</span></p>
             <p>Curso: Proyecto de Vida | 2025</p>
         </div>
     </div>
 </body>
 </html>
+
 
