--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                 <div class="timeline-dot"></div>
                 <div class="content">
                     <div class="period-title">
-                        <span class="icon">🎓</span>
+                        <span class="icon"></span>
                         Educación Profesional y Técnica
                         <span class="period-dates">(2022 - 2025)</span>
                     </div>
@@ -599,7 +599,7 @@
                         He aprendido a ser más responsable, organizado y a tener liderazgo en diferentes áreas
                     </div>
                     <div class="achievement education">
-                        Actualmente sigo estudiando en la UNAD (7 materias) y aprendiendo nuevas tecnologías de programación y redes
+                        Actualmente sigo estudiando en la UNAD y aprendiendo nuevas tecnologías de programación y redes
                     </div>
                 </div>
             </div>
@@ -608,7 +608,7 @@
                 <div class="timeline-dot"></div>
                 <div class="content">
                     <div class="period-title">
-                        <span class="icon">🚀</span>
+                        <span class="icon"></span>
                         Presente
                         <span class="period-dates">(2025)</span>
                     </div>
@@ -653,5 +653,6 @@
     </div>
 </body>
 </html>
+
 
 
