--- a/index.html
+++ b/index.html
@@ -572,14 +572,11 @@
                     <div class="achievement education important">
                         <strong>2022:</strong> Inicié la carrera de <strong>Ingeniería de Sistemas en la UNAD</strong>, de forma virtual
                     </div>
-                    <div class="achievement">
-                        <strong>2023:</strong> Pensé en un proyecto llamado <strong>Startup Meet</strong>, para conectar emprendedores con inversionistas
-                    </div>
                     <div class="achievement education important">
                         <strong>2024:</strong> Empecé el <strong>técnico en Programación de Software</strong>
                     </div>
                     <div class="achievement education important">
-                        🛠<strong>Abril de 2025:</strong> Terminé ese técnico con las prácticas, donde trabajé más en soporte técnico y configuración de equipos
+                        <strong>Abril de 2025:</strong> Terminé ese técnico con las prácticas, donde trabajé en desarrollo de software, soporte técnico y configuración de equipos
                     </div>
                 </div>
             </div>
@@ -653,6 +650,7 @@
     </div>
 </body>
 </html>
+
 
 
 
